[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scenes and Scripts/View/Karten.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Green.png" type="Texture" id=3]
[ext_resource path="res://cards_corona_bg_music_loop.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Aktuelles/Frame_Button_Aktuelles.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Carlito-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Fonts/Carlito-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes and Scripts/View/Game.gd" type="Script" id=8]
[ext_resource path="res://Scenes and Scripts/active_button.stylebox" type="StyleBox" id=9]
[ext_resource path="res://Assets/Aktuelles/Frame_Aktuelles.png" type="Texture" id=10]
[ext_resource path="res://Assets/Ressourcen/Frame_Button_Ressource.png" type="Texture" id=11]
[ext_resource path="res://Assets/Kurve/Frame_Button_activated.png" type="Texture" id=12]
[ext_resource path="res://Assets/Kurve/Kurvenachse_ohneBeschriftung.png" type="Texture" id=13]
[ext_resource path="res://Assets/Kurve/Frame_Kurve.png" type="Texture" id=14]
[ext_resource path="res://Assets/Kurve/Frame_Button_deactivated.png" type="Texture" id=15]
[ext_resource path="res://Scenes and Scripts/disabled_button.stylebox" type="StyleBox" id=16]
[ext_resource path="res://Assets/Ressourcen/Frame_Ressourcen.png" type="Texture" id=17]
[ext_resource path="res://Assets/Ressourcen/Icon_Wirtschaft.png" type="Texture" id=18]
[ext_resource path="res://Assets/Ressourcen/Icon_Sicherheitskraefte.png" type="Texture" id=19]
[ext_resource path="res://Assets/Ressourcen/Icon_Gesundheitswesen.png" type="Texture" id=20]
[ext_resource path="res://Assets/Ressourcen/Icon_Intensivbetten.png" type="Texture" id=21]
[ext_resource path="res://Assets/Ressourcen/Icon_Zufriedenheit.png" type="Texture" id=22]
[ext_resource path="res://Assets/RechtsUnten/Deutschlandkarte.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 332, 48 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 444, 93 )
margin_left = 20.0
margin_right = 20.0
margin_top = 10.0
margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 444, 85 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 444, 85 )
margin_left = 20.0
margin_right = 20.0
margin_top = 10.0
margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1307, 610 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 332, 48 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ 56.0, 712.0, 1024.0, 632.0 ],
"_edit_vertical_guides_": [ 64.0, 1856.0, 448.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 1936.0
margin_bottom = 1096.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8.63391, -36.6941 )
scale = Vector2( 0.564843, 0.564843 )
texture = ExtResource( 2 )
centered = false

[node name="Control" type="Control" parent="."]
margin_right = 1900.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_TagEnde" type="Button" parent="Control"]
margin_left = 1583.68
margin_top = 978.038
margin_right = 1852.68
margin_bottom = 1026.04
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
text = "NÄCHSTER TAG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Land" type="Button" parent="Control"]
margin_left = 1584.0
margin_top = 920.0
margin_right = 1853.0
margin_bottom = 968.002
custom_styles/hover = ExtResource( 16 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/focus = ExtResource( 16 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = SubResource( 1 )
text = "LÄNDERAUSWAHL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = 64.0
margin_top = 56.0
margin_right = 448.0
margin_bottom = 712.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer_Aktuelles" type="VBoxContainer" parent="Control/TextureRect"]
margin_left = 32.0
margin_top = 40.0
margin_right = 352.0
margin_bottom = 616.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Aktuelles" type="Label" parent="Control/TextureRect/VBoxContainer_Aktuelles"]
margin_right = 320.0
margin_bottom = 35.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Aktuelles"
align = 1
uppercase = true

[node name="ScrollContainer_Aktuelles" type="ScrollContainer" parent="Control/TextureRect/VBoxContainer_Aktuelles"]
margin_top = 39.0
margin_right = 320.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="VBoxContainer_Aktuelles_Scrollable" type="VBoxContainer" parent="Control/TextureRect/VBoxContainer_Aktuelles/ScrollContainer_Aktuelles"]
margin_right = 320.0
margin_bottom = 90.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TextureRect/VBoxContainer_Aktuelles/ScrollContainer_Aktuelles/VBoxContainer_Aktuelles_Scrollable"]
margin_right = 320.0
margin_bottom = 82.0

[node name="TextureRect" type="TextureRect" parent="Control/TextureRect/VBoxContainer_Aktuelles/ScrollContainer_Aktuelles/VBoxContainer_Aktuelles_Scrollable/HBoxContainer"]
margin_right = 105.0
margin_bottom = 82.0
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Control/TextureRect/VBoxContainer_Aktuelles/ScrollContainer_Aktuelles/VBoxContainer_Aktuelles_Scrollable/HBoxContainer"]
margin_left = 109.0
margin_right = 320.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Grüne Neuigkeiten! 
Je mehr 
Zeilen ich hier mache
desto
"
valign = 1

[node name="HSeparator" type="HSeparator" parent="Control/TextureRect/VBoxContainer_Aktuelles/ScrollContainer_Aktuelles/VBoxContainer_Aktuelles_Scrollable"]
margin_top = 86.0
margin_right = 320.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Control"]
anchor_left = 0.00170248
anchor_right = 0.00170248
margin_left = 501.832
margin_top = 58.038
margin_right = 1853.83
margin_bottom = 714.038
custom_styles/tab_fg = SubResource( 5 )
custom_styles/tab_disabled = SubResource( 6 )
custom_styles/tab_bg = SubResource( 7 )
custom_styles/panel = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="COVID-19 Zahlen" type="Control" parent="Control/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0

[node name="Line2D_infizierte" type="Line2D" parent="Control/TabContainer/COVID-19 Zahlen"]
position = Vector2( 280, 420 )
default_color = Color( 1, 0.337255, 0.286275, 1 )

[node name="Legende_infizierte" type="Line2D" parent="Control/TabContainer/COVID-19 Zahlen"]
position = Vector2( 494.933, 487.962 )
points = PoolVector2Array( -192, 96, -192, 40 )
default_color = Color( 1, 0.337255, 0.286275, 1 )

[node name="Line2D_Tote" type="Line2D" parent="Control/TabContainer/COVID-19 Zahlen"]
visible = false
position = Vector2( 280, 420 )
points = PoolVector2Array( 0, 0, 150, -150 )
default_color = Color( 0, 0, 0, 1 )

[node name="Legende_Tote2" type="Line2D" parent="Control/TabContainer/COVID-19 Zahlen"]
position = Vector2( 726.933, 487.962 )
points = PoolVector2Array( -195.9, 96, -195.9, 40 )
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D_Genesene" type="Line2D" parent="Control/TabContainer/COVID-19 Zahlen"]
position = Vector2( 280, 420 )
default_color = Color( 0.376471, 1, 0.286275, 1 )

[node name="Legende_Genesene2" type="Line2D" parent="Control/TabContainer/COVID-19 Zahlen"]
position = Vector2( 910.933, 487.962 )
points = PoolVector2Array( -192, 96, -192, 40 )
default_color = Color( 0.376471, 1, 0.286275, 1 )

[node name="Label_Bevoelkerung" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 30.9333
margin_top = 527.962
margin_right = 286.933
margin_bottom = 584.962
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gesamtbevölkerung:
80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Infizierte" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 310.933
margin_top = 527.962
margin_right = 428.933
margin_bottom = 584.962
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Infizierte:
80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Tote" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 542.933
margin_top = 527.962
margin_right = 678.933
margin_bottom = 590.962
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tote:
80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Genesene" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 726.933
margin_top = 527.962
margin_right = 862.933
margin_bottom = 590.962
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Genesene:
80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D_dead" type="Line2D" parent="Control/TabContainer/COVID-19 Zahlen"]
position = Vector2( 280, 420 )
default_color = Color( 0, 0, 0, 1 )

[node name="Label_Scale_5" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 46.9333
margin_top = 91.962
margin_right = 162.933
margin_bottom = 117.962
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Scale_4" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 46.9333
margin_top = 171.962
margin_right = 162.933
margin_bottom = 197.962
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Scale_3" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 46.9333
margin_top = 251.962
margin_right = 162.933
margin_bottom = 277.962
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Scale_2" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 46.9333
margin_top = 339.962
margin_right = 162.933
margin_bottom = 365.962
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Scale_1" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 46.9333
margin_top = 419.962
margin_right = 162.933
margin_bottom = 445.962
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "80.000.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Scale_Tag" type="Label" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 1046.93
margin_top = 523.962
margin_right = 1162.93
margin_bottom = 549.962
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tag 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/TabContainer/COVID-19 Zahlen"]
margin_left = 166.933
margin_top = 19.962
margin_right = 1315.93
margin_bottom = 515.962
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wirtschaft" type="Control" parent="Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0

[node name="Line2D" type="Line2D" parent="Control/TabContainer/Wirtschaft"]
position = Vector2( 67.4633, 505.989 )
points = PoolVector2Array( 0, 0, 316.836, -44.0809, 611.084, -168.072, 740.627, -388.296 )
default_color = Color( 1, 0.337255, 0.286275, 1 )

[node name="Politik" type="Control" parent="Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0

[node name="Line2D2" type="Line2D" parent="Control/TabContainer/Politik"]
position = Vector2( 141.488, 561.507 )
points = PoolVector2Array( 0, 0, 316.836, -44.0809, 611.084, -168.072, 740.627, -388.296 )
default_color = Color( 0.309804, 1, 0.286275, 1 )

[node name="TextureRect2" type="TextureRect" parent="Control"]
margin_left = 64.0
margin_top = 736.0
margin_right = 448.0
margin_bottom = 1024.0
texture = ExtResource( 17 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer_Resourcen" type="VBoxContainer" parent="Control/TextureRect2"]
margin_left = 32.0
margin_top = 24.0
margin_right = 352.0
margin_bottom = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Resourcen" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen"]
margin_right = 320.0
margin_bottom = 35.0
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Ressourcen"
align = 1
uppercase = true

[node name="VBoxContainer_Resourcen_innen" type="VBoxContainer" parent="Control/TextureRect2/VBoxContainer_Resourcen"]
margin_top = 39.0
margin_right = 320.0
margin_bottom = 240.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer_res_Wirtschaft" type="HBoxContainer" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen"]
margin_right = 320.0
margin_bottom = 37.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect_Icon_Wirtschaft" type="TextureRect" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Wirtschaft"]
margin_right = 78.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="Label_res_Wirtschaft" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Wirtschaft"]
margin_left = 82.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Wirtschaft"
valign = 1

[node name="Label_res_Wirtschaft_value" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Wirtschaft"]
margin_left = 242.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100%"
align = 2
valign = 1

[node name="HBoxContainer_res_Sicherheit" type="HBoxContainer" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen"]
margin_top = 41.0
margin_right = 320.0
margin_bottom = 78.0
size_flags_vertical = 3

[node name="TextureRect_Icon_Sicherheit" type="TextureRect" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Sicherheit"]
margin_right = 78.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="Label_res_Sicherheit" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Sicherheit"]
margin_left = 82.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sicherheitskräfte"
valign = 1

[node name="Label_res_Sicherheit_value" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Sicherheit"]
margin_left = 242.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100%"
align = 2
valign = 1

[node name="HBoxContainer_res_Gesundheit" type="HBoxContainer" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen"]
margin_top = 82.0
margin_right = 320.0
margin_bottom = 119.0
size_flags_vertical = 3

[node name="TextureRect_Icon_Gesundheit" type="TextureRect" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Gesundheit"]
margin_right = 77.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 20 )
expand = true
stretch_mode = 5

[node name="Label_res_Gesundheit" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Gesundheit"]
margin_left = 81.0
margin_top = 8.0
margin_right = 239.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gesundheitswesen"
valign = 1

[node name="Label_res_Gesundheit_value" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Gesundheit"]
margin_left = 243.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100%"
align = 2
valign = 1

[node name="HBoxContainer_res_Betten" type="HBoxContainer" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen"]
margin_top = 123.0
margin_right = 320.0
margin_bottom = 160.0
size_flags_vertical = 3

[node name="TextureRect_Icon_Betten" type="TextureRect" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Betten"]
margin_right = 78.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 21 )
expand = true
stretch_mode = 5

[node name="Label_res_Betten" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Betten"]
margin_left = 82.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Intensivbetten"
valign = 1

[node name="Label_res_Betten_value" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Betten"]
margin_left = 242.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100%"
align = 2
valign = 1

[node name="HBoxContainer_res_Zufrieden" type="HBoxContainer" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen"]
margin_top = 164.0
margin_right = 320.0
margin_bottom = 201.0
size_flags_vertical = 3

[node name="TextureRect_Icon_Zufrieden" type="TextureRect" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Zufrieden"]
margin_right = 78.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 22 )
expand = true
stretch_mode = 5

[node name="Label_res_Zufrieden" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Zufrieden"]
margin_left = 82.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Zufriedenheit"
valign = 1

[node name="Label_res_Zufrieden_value" type="Label" parent="Control/TextureRect2/VBoxContainer_Resourcen/VBoxContainer_Resourcen_innen/HBoxContainer_res_Zufrieden"]
margin_left = 242.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100%"
align = 2
valign = 1

[node name="TextureRect3" type="TextureRect" parent="Control"]
margin_left = 1640.0
margin_top = 728.0
margin_right = 1776.0
margin_bottom = 904.0
texture = ExtResource( 23 )
expand = true
stretch_mode = 5

[node name="Karten" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.097
autoplay = true
[connection signal="pressed" from="Control/Button_TagEnde" to="." method="_on_Button_TagEnde_pressed"]
